fix: fullscreen icons overflow player (#595)
* fix: fullscreen icons overflow player

* chore: version bump

* fix: lint property-order errors

* chore: version bump

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -757,7 +757,8 @@ $start-button-size: 15vw;
       font-family: inherit;
       font-size: 100%;
       height: calc(100% - #{(2 * $romper-button-border)});
-      margin-bottom: 1%;
+      margin: 0;
+      padding: 0;
       pointer-events: all;
       width: calc(100% - #{(2 * $romper-button-border)});
 
@@ -798,8 +799,11 @@ $start-button-size: 15vw;
 }
 
 .romper-link-icon-container {
+  align-items: center;
   border: $romper-button-border solid $transparent;
+  display: flex;
   height: 8em;
+  justify-content: center;
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
@@ -807,10 +811,7 @@ $start-button-size: 15vw;
 
   img {
     height: 80%;
-    margin-left: 10%;
-    margin-top: 10%;
     object-fit: contain;
-    object-position: center;
     width: 80%;
   }
 }
